--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -202,6 +202,10 @@
     <Compile Include="Migrations\201703281527072_CreateGigTable.Designer.cs">
       <DependentUpon>201703281527072_CreateGigTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703281556398_OverrideConvention.cs" />
+    <Compile Include="Migrations\201703281556398_OverrideConvention.Designer.cs">
+      <DependentUpon>201703281556398_OverrideConvention.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -294,6 +298,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703281527072_CreateGigTable.resx">
       <DependentUpon>201703281527072_CreateGigTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703281556398_OverrideConvention.resx">
+      <DependentUpon>201703281556398_OverrideConvention.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
