Populate the database

--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -206,6 +206,10 @@
     <Compile Include="Migrations\201703281556398_OverrideConvention.Designer.cs">
       <DependentUpon>201703281556398_OverrideConvention.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703281608533_PopulateGenreTable.cs" />
+    <Compile Include="Migrations\201703281608533_PopulateGenreTable.Designer.cs">
+      <DependentUpon>201703281608533_PopulateGenreTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -301,6 +305,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703281556398_OverrideConvention.resx">
       <DependentUpon>201703281556398_OverrideConvention.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703281608533_PopulateGenreTable.resx">
+      <DependentUpon>201703281608533_PopulateGenreTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
