--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -226,6 +226,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\FutureDate.cs" />
     <Compile Include="ViewModel\GigFormViewModel.cs" />
+    <Compile Include="ViewModel\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\aspnet-GigHub-20170328090117.mdf" />
