--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -200,10 +200,13 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AttendancesController.cs" />
+    <Compile Include="Controllers\FollowingsController.cs" />
+    <Compile Include="ViewModel\HomeViewModel.cs" />
     <Compile Include="DTO\AttendancesDto.cs" />
     <Compile Include="Controllers\GigsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DTO\FollowingDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -239,10 +242,15 @@
     <Compile Include="Migrations\201703300039375_AddAttendces.Designer.cs">
       <DependentUpon>201703300039375_AddAttendces.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703300716313_AddFollowing.cs" />
+    <Compile Include="Migrations\201703300716313_AddFollowing.Designer.cs">
+      <DependentUpon>201703300716313_AddFollowing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\Attendance.cs" />
+    <Compile Include="Models\Following.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Gig.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -354,6 +362,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703300039375_AddAttendces.resx">
       <DependentUpon>201703300039375_AddAttendces.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703300716313_AddFollowing.resx">
+      <DependentUpon>201703300716313_AddFollowing.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
