Refactoring Towards an Object-oriented Design

--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -207,6 +207,13 @@
     <Compile Include="Migrations\201704100725281_AddIsCancledToGig.Designer.cs">
       <DependentUpon>201704100725281_AddIsCancledToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704101458045_AddNotification.cs" />
+    <Compile Include="Migrations\201704101458045_AddNotification.Designer.cs">
+      <DependentUpon>201704101458045_AddNotification.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Notification.cs" />
+    <Compile Include="Models\NotificationType.cs" />
+    <Compile Include="Models\UserNotification.cs" />
     <Compile Include="ViewModel\GigsViewModel.cs" />
     <Compile Include="DTO\AttendancesDto.cs" />
     <Compile Include="Controllers\GigsController.cs" />
@@ -375,6 +382,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704100725281_AddIsCancledToGig.resx">
       <DependentUpon>201704100725281_AddIsCancledToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704101458045_AddNotification.resx">
+      <DependentUpon>201704101458045_AddNotification.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
